changes to plotting

--- a/scripts/test.ipynb
+++ b/scripts/test.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sample(theta,eps,upper_bound=1,lower_bound=0,):\n",
+    "def draw_theta(theta,eps,upper_bound=1,lower_bound=0,):\n",
     "    def unif(t,s_lb,s_ub):\n",
     "        if np.random.rand()>0.5:\n",
     "            s = np.random.uniform(s_lb,t)\n",
@@ -25,10 +25,16 @@
     "            s = np.random.uniform(t,s_ub)\n",
     "        return s\n",
     "\n",
+    "    if type(upper_bound) == int:\n",
+    "        upper_bound = np.ones(len(theta))*upper_bound\n",
+    "    if type(lower_bound) == int:\n",
+    "        lower_bound = np.ones(len(theta))*lower_bound\n",
+    "    \n",
+    "\n",
     "    theta_proposed = np.zeros(len(theta))\n",
     "    for i,t in enumerate(theta): \n",
-    "        lower = max([t-eps[i]/2,lower_bound])\n",
-    "        upper = min([t+eps[i]/2,upper_bound])\n",
+    "        lower = max([t-eps[i]/2,lower_bound[i]])\n",
+    "        upper = min([t+eps[i]/2,upper_bound[i]])\n",
     "        theta_proposed[i] = np.random.uniform(lower,upper,1)\n",
     "    #if sum(theta_proposed)>1:\n",
     "    scale_lb = max([sum(theta)-np.mean(eps),0])\n",
@@ -47,23 +53,41 @@
     "theta = np.random.rand(dim)\n",
     "theta = theta/sum(theta)\n",
     "eps = np.ones(dim)*0.2\n",
-    "\n",
     "#x = np.array([sample(theta,eps) for i in range(3000)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sample' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-fb56fca587dd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mthetas\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m100000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mtheta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtheta\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0meps\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtheta\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mthetas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtheta\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sample' is not defined"
+     ]
+    }
+   ],
    "source": [
     "thetas = []\n",
     "for i in range(100000):\n",
-    "    theta = sample(theta,eps) \n",
+    "    theta = draw_theta(theta,eps) \n",
     "    if sum(theta)>0:\n",
     "        thetas.append(theta)\n",
     "thetas = np.array(thetas)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -5036,9 +5060,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Python 3.7.9 64-bit ('pypsa-eur': conda)",
+   "name": "python379jvsc74a57bd0ca9d422475ebf2c9dc823328c1c5bbf60760e717e779173dcf7f4efcfea1ab30"
   },
   "language_info": {
    "codemirror_mode": {
@@ -5050,7 +5073,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9-final"
+   "version": "3.7.9"
   },
   "orig_nbformat": 2
  },
